--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ scikit-learn>=1.0.0
 # Deep learning
 torch>=1.9.0
 torchvision>=0.10.0
+pytorch-lightning>=1.8.0
 
 # Statistical analysis
 statsmodels>=0.13.0
