more change brain behavior

--- a/config.yaml
+++ b/config.yaml
@@ -66,22 +66,22 @@ data_paths:
   
   # Comprehensive Brain-Behavior Analysis Datasets
   nki_rs_td:
-    ig_csv: "/oak/stanford/groups/menon/projects/mellache/2024_age_prediction_test/results/count_data/nki_count_data.csv"
-    behavioral_data: "/oak/stanford/groups/menon/projects/mellache/2021_foundation_model/data/imaging/for_dnn/nki_age_cog_dev_wIDs/fold_0.bin"
+    ig_csv: "/oak/stanford/groups/menon/projects/mellache/2024_age_prediction_test/results/integrated_gradients/nki_cog_dev_wIDS_features_IG_convnet_regressor_single_model_fold_0.csv"
+    behavioral_data: "/oak/stanford/groups/menon/projects/mellache/2021_foundation_model/scripts/FLUX/assessment_data/8100_CAARS-S-S_20191009.csv"
   adhd200_adhd:
     ig_csv: "/oak/stanford/groups/menon/projects/mellache/2024_age_prediction_test/results/count_data/adhd200_adhd_count_data.csv"
     behavioral_data: "/oak/stanford/groups/menon/projects/mellache/2021_foundation_model/data/imaging/for_dnn/adhd200_regression_age_ADHD_wIDs/fold_0.bin"
   cmihbn_adhd:
     ig_csv: "/oak/stanford/groups/menon/projects/mellache/2024_age_prediction_test/results/count_data/cmihbn_adhd_count_data.csv"
     behavioral_data: "/oak/stanford/groups/menon/projects/mellache/2021_foundation_model/data/imaging/for_dnn/cmihbn_age/fold_0.bin"
-    c3sr_data: "/oak/stanford/groups/menon/projects/mellache/2021_foundation_model/scripts/dnn/prepare_data/adhd/C3SR.csv"
+    c3sr_data: "/oak/stanford/groups/menon/projects/mellache/2024_age_prediction/scripts/prepare_data/cmihbn/behavior"
   adhd200_td:
     ig_csv: "/oak/stanford/groups/menon/projects/mellache/2024_age_prediction_test/results/count_data/adhd200_td_count_data.csv"
     behavioral_data: "/oak/stanford/groups/menon/projects/mellache/2021_foundation_model/data/imaging/for_dnn/adhd200_regression_age_TD_wIDs/fold_0.bin"
   cmihbn_td:
     ig_csv: "/oak/stanford/groups/menon/projects/mellache/2024_age_prediction_test/results/count_data/cmihbn_td_count_data.csv"
     behavioral_data: "/oak/stanford/groups/menon/projects/mellache/2021_foundation_model/data/imaging/for_dnn/cmihbn_age_TD/fold_0.bin"
-    c3sr_data: "/oak/stanford/groups/menon/projects/mellache/2021_foundation_model/scripts/dnn/prepare_data/adhd/C3SR.csv"
+    c3sr_data: "/oak/stanford/groups/menon/projects/mellache/2021_foundation_model/scripts/FLUX/assessment_data/C3SR.csv"
   abide_asd:
     ig_csv: "/oak/stanford/groups/menon/projects/mellache/2024_age_prediction_test/results/count_data/abide_asd_count_data.csv"
     behavioral_data: "/oak/stanford/groups/menon/projects/mellache/2021_foundation_model/data/imaging/for_dnn/abide_asd_asd_dev_age_wIDs/fold_0.bin"
