--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,23 @@
+# Age Prediction Analysis Pipeline - Python Requirements
+# Compatible with Python 3.8-3.10
+
 # Core scientific computing
-numpy>=1.21.0
-pandas>=1.3.0
+numpy>=1.21.0,<2.0.0
+pandas>=1.3.0,<2.0.0
 scipy>=1.7.0
 scikit-learn>=1.0.0
-
-# Deep learning
-torch>=1.9.0
-torchvision>=0.10.0
-pytorch-lightning>=1.8.0
-
-# Statistical analysis
-statsmodels>=0.13.0
 
 # Visualization
 matplotlib>=3.4.0
 seaborn>=0.11.0
 
-# Neuroimaging
-nilearn>=0.9.0
-nibabel>=3.2.0
+# Data handling
+openpyxl>=3.0.0
+tabulate>=0.8.0
 
-# Feature attribution
-captum>=0.6.0
+# Deep learning (optional - only needed if running models)
+# torch>=1.10.0
 
-# Progress bars and utilities
-tqdm>=4.62.0
-pathlib2>=2.3.0
-
-# Optional: For advanced plotting
-plotly>=5.0.0
-
-# Optional: For network analysis
-networkx>=2.6.0
-
-# Optional: For parallel processing
-joblib>=1.1.0
-
-# Optional: For configuration management
-pyyaml>=6.0
-
-# Optional: For logging
-loguru>=0.6.0
+# Note: If you encounter installation issues, try:
+# pip install --upgrade pip setuptools wheel
+# Then retry: pip install -r requirements.txt
